fix footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -43,15 +43,20 @@ hr {
   text-decoration: inherit;
 }
 
-.container {
-  height: 85vh;
+.container.main {
+  min-height: 85vh;
 }
 
-.container.credit {
-  height: 50px;
+.footer {
+  color: #fff;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
 }
+
 
 a {
-  color: inherit;
-  text-decoration: inherit;
+  color: #fff;
+  text-decoration: none;
 }
